@@ -1,5 +1,6 @@
 - Plugin OutageReport replaced by plugin MailingLists which can check multiple
   lists. Configuration section :outage_list is renamed to :mailing_lists.
+- Plugin DokuWiki to monitor recents changes in a wiki
 
 * Sat Aug 27 2016 - version 0.1.0
 - Initial release
